--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.0",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "@react-navigation/native": "^7.0.0",
-    "@react-navigation/bottom-tabs": "^7.0.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-safe-area-context": "4.14.0"
+    "@expo/vector-icons": "^14.1.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/core": "^7.12.1",
+    "@react-navigation/native": "^6.1.7",
+    "expo": "~53.0.0",
+    "expo-status-bar": "~2.2.3",
+    "metro": "^0.82.0",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
