--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/core": "^7.12.1",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~53.0.0",
     "expo-status-bar": "~2.2.3",
     "metro": "^0.82.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-gesture-handler": "^2.27.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1"
   },
